# flashFinder

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  FindFFTW3.cmake  Makefile  README.md  flashFinder  flashFinder.cpp  generatecodes.cpp  spreadSpec  spreadSpec.cpp
MATLAB/: VisualiseSSvideo.m  cxcorr.m  gencodes.m  gengoldcode.m  genmsequence.m  processSSvideo.m
fakeVideos/: frames  makeFrames.sh
